added support to start the StartAppWindow application and resolve the generated properties files to be picked up on the classpath